--- a/projet-api/build.gradle
+++ b/projet-api/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     testImplementation 'com.h2database:h2:2.1.214'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    implementation(project(':projet-ui'))
 }
 
 tasks.named('test') {
